--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <h4 class="text-center">Worksheets</h4>
         <!-- Displays a list of worksheets -->
         <div id="worksheets" class="p-2">
-            Hello
+ 
         </div>
     </body>
     <!-- imports the Javascript files -->
     <script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/js/tableau-extensions-1.0.0.min.js"></script>
+    <script type="text/javascript" src="js/tableau-extensions-1.0.0.min.js"></script>
     <script type="text/javascript" src="js/application.js"></script>    
 </html>
