--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h4 class="text-center">Worksheets</h4>
         <!-- Displays a list of worksheets -->
-        <div id="worksheets" class="p-2">
+        <div id="worksheets1" class="p-2">
  
         </div>
     </body>
